feat: revamp landing page

--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 # Development Environment Variables
 
 # API Mode: 'true' for MockBackend, 'false' for Real API
-VITE_USE_MOCK=false
+VITE_USE_MOCK=true
 lled
