docs: update documentation and hosting configs

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,17 @@
 {
+  "redirects": [
+    {
+      "source": "/(.*)",
+      "has": [
+        {
+          "type": "host",
+          "value": "cognito-agent.vercel.app"
+        }
+      ],
+      "destination": "https://cognito.software/$1",
+      "permanent": true
+    }
+  ],
   "rewrites": [
     {
       "source": "/((?!api/.*).*)",
